gac_sb/objects/AppATmasseSalariale__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>Annee__c</fullName>
        <label>Année</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effectif__c</fullName>
        <label>Effectif</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EtablissementConcerne__c</fullName>
        <label>Etablissement concerné</label>
        <referenceTo>AppATetablissement__c</referenceTo>
        <relationshipLabel>Masses salariales</relationshipLabel>
        <relationshipName>MassesSalariales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MasseSalarialeEstimee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Masse Salariale Estimée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasseSalariale__c</fullName>
        <label>Masse Salariale</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <formula>HYPERLINK( EtablissementConcerne__r.Mission__c , EtablissementConcerne__r.Mission__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission</label>
        <type>Text</type>
    </fields>
    <label>Masse salariale</label>
    <nameField>
        <label>Nom de la masse salariale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Masses salariales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>